# spliti

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: README.md  spliti-app.service
scripts/: clear_expenses.py  gen_vapid.py  test_push.py
spliti/: __init__.py  ai.py  app.py  ask.py  balances.py  config.py  db.py  firestore_sync.py  health.py  notifications.py  split.db.bak-20260615-clear
spliti/static/: health.html  index.html  manifest.webmanifest  sw.js
tests/: conftest.py  sync_sim.test.mjs  test_firestore.py  test_health.py  test_notify.py  test_split.py
